src/test/ui/parser/inner-attr.stderr
error: an inner attribute is not permitted following an outer attribute
  --> $DIR/inner-attr.rs:3:1
   |
LL | #[feature(lang_items)]
   | ---------------------- previous outer attribute
LL | 
LL | #![recursion_limit="100"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ not permitted following an outer attribute
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files. Outer attributes, like `#[test]`, annotate the item following them.

error: aborting due to previous error

